[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

regex = "1.10.2"
num-integer = "0.1.45"
cached = "0.46.1"

[dependencies.smallvec]
version = "1.11.2"
features = ["union"]

[profile.release]
lto = true
codegen-units = 1

#[lints.clippy]
#nursery = "warn"
#pedantic = "warn"
#restriction = "warn"
#
#implicit_return = "allow"
#missing_docs = "allow"
#missing_docs_in_private_items = "allow"
#shadow_reuse = "allow"
#std_instead_of_core = "allow"
#min_ident_chars = "allow"